--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "eventemitter3": "^4.0.0"
+    "eventemitter3": "^4.0.0",
+    "express": "^4.17.1"
   },
   "typings": "./typings/index.d.ts"
 }
