--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "eventemitter3": "^4.0.0",
-    "express": "^4.17.1"
+    "eventemitter3": "^4.0.0"
   },
   "typings": "./typings/index.d.ts"
 }
