--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "gblapi.js",
   "version": "1.3.13",
-  "description": "An API for the GlennBotList",
+  "description": "An API Wrapper for the GlennBotList",
   "main": "index.js",
   "scripts": {
     "test": "node test/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DieselGaming/gblapi.js.git"
   },
   "keywords": [
     "glennbotlist",
